--- a/zkcrypto/Cargo.toml
+++ b/zkcrypto/Cargo.toml
@@ -17,6 +17,7 @@ libc = { version = "0.2.148", default-features = false }
 rayon = { version = "1.6.0", optional = true }
 smallvec = { version = "1.11.1", features = [] }
 subtle = "2.5.0"
+byteorder = "1.5.0"
 
 [dev-dependencies]
 criterion = "0.5.1"
