--- a/zkcrypto/Cargo.toml
+++ b/zkcrypto/Cargo.toml
@@ -6,13 +6,13 @@ edition = "2021"
 [dependencies]
 blst = {'git' = 'https://github.com/supranational/blst.git'}
 kzg = { path = "../kzg", default-features = false }
-bls12_381 = { path = "../zkcrypto/bls12_381" }
 ff = { version = "0.13", features = ["derive"] }
 hex = "0.4.3"
 rand = { version = "0.8.5", optional = true }
 libc = { version = "0.2.148", default-features = false }
 rayon = { version = "1.8.0", optional = true }
 subtle = "2.5.0"
+bls12_381 = "0.7.0"
 
 [dev-dependencies]
 criterion = "0.5.1"
