--- a/zkcrypto/Cargo.toml
+++ b/zkcrypto/Cargo.toml
@@ -14,6 +14,7 @@ libc = { version = "0.2.148", default-features = false }
 rayon = { version = "1.8.0", optional = true }
 subtle = "2.5.0"
 byteorder = "1.5.0"
+group = "0.13.0"
 
 [dev-dependencies]
 criterion = "0.5.1"
@@ -25,6 +26,7 @@ default = [
     "std",
     "rand"
 ]
+
 std = [
     "kzg/std",
     "libc/std"
